# GuestTracker

./: .bumpversion.cfg  .flake8  .funcignore  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  run.py  smseventlog.spec
guesttracker/: __init__.py  charts.py  config.py  database.py  dbtransaction.py  errors.py  eventfolders.py  functions.py  logger.py  reports.py  styles.py  users.py
guesttracker/_resources/: config.yaml  darkstyle.qss
guesttracker/_resources/images/: gt_icon.icns
guesttracker/_resources/reports/: failure_report.html  report_template.html  sections.html
guesttracker/_resources/secret/: azure_blob.yaml  credentials-W184-194787.yaml  credentials.yaml  db-W184-194787.yaml  db.yaml  discord-W184-194787.csv  discord.csv  smseventlog.key
guesttracker/_unencrypted/: azure_blob.yaml  credentials.yaml  db.yaml  discord.csv
guesttracker/data/: availability.py  components.py  factorycampaign.py  framecracks.py  oilsamples.py  units.py
guesttracker/data/internal/: dls.py  faults.py  plm.py  utils.py
guesttracker/gui/: _global.py  datamodel.py  delegates.py  formfields.py  gui.py  multithread.py  startup.py  tables.py  update.py
guesttracker/gui/dialogs/: addrows.py  base.py  dialogbase.py  passwords.py  refreshtables.py  tables.py
guesttracker/queries/: __init__.py  avail.py  comp.py  el.py  fc.py  hba.py  misc.py  oil.py  plm.py  smr.py
guesttracker/utils/: credentials.py  dbconfig.py  dbmodel.py  download.py  email.py  excel.py  exchange.py  fileops.py  onedrive.py  outlook.py  web.py  word.py  xterm_color.py
scripts/: actlog.py  build.py  build.sh  processfiles.py  upload.sh  utils.py  working.py
tests/unit/: test_functions.py
utils/utils/: generate-iconset.py
